--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
     "ionicons": "3.0.0",
     "jquery": "^3.2.1",
     "recorderjs": "^1.0.1",
+    "recordrtc": "^5.4.5",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
