fix the sample rate

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "2.0.1",
     "@types/jquery": "^3.2.16",
+    "audio-resampler": "^1.0.1",
     "cordova-android": "~6.3.0",
     "cordova-ios": "4.5.3",
     "cordova-plugin-compat": "^1.2.0",
